staging/services/webserver-cluster/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}


# Configure the AWS Provider
provider "aws" {
    region = var.region
    profile = var.profile_name
}

# Create a VPC
resource "aws_vpc" "uat_vpc" {
  cidr_block  = "178.0.0.0/16"

  tags = {
    Name = "uat-vpc"
  }
}

resource "aws_internet_gateway" "uat_gw" {
  vpc_id = aws_vpc.uat_vpc.id

  tags = {
    Name = "uat_igw"
  }
}

resource "aws_subnet" "uat_public_subnet" {
  vpc_id     = aws_vpc.uat_vpc.id
  cidr_block = var.uat_public_subnet_cidr
  map_public_ip_on_launch = true
  availability_zone = "eu-west-2a"

  tags = {
    Name = "uat-public_subnet"
  }
}

resource "aws_route_table" "uat_public_rt" {
  vpc_id = aws_vpc.uat_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.uat_gw.id
  }

  tags = {
    Name = "uat-public_rt"
  }
}

resource "aws_route_table_association" "uat_public_rt_asso" {
  subnet_id      = aws_subnet.uat_public_subnet.id
  route_table_id = aws_route_table.uat_public_rt.id
}

resource "aws_instance" "uat_env" {
    ami = "ami-0eb260c4d5475b901"
    instance_type = var.instance_type
    subnet_id = aws_subnet.uat_public_subnet.id
    security_groups = [aws_security_group.uat_sg.id]

    user_data = data.template_file.user_data.rendered

    tags = {
        Name = "terraform-uat_env"
    }
}

/*
terraform {
  backend "s3" {
    bucket = "works-up-and-running-state"
    key = "stage/services/webserver-cluster/terraform.tfstate"
    region = "eu-west-2"
    dynamodb_table = "works-up-and-running-state"
    encrypt = true
  }
}
*/

data "template_file" "user_data" {
  template = file("user-data.sh")

  vars = {
    #server_port = var.server_port
    db_address = data.terraform_remote_state.db.outputs.address
    db_port = data.terraform_remote_state.db.outputs.port
  }
}

data "terraform_remote_state" "db" {
  backend = "s3"

  config ={
    bucket = "works-up-and-running-state"
    key = "staging/data-stores/mysql/terraform.tfstate"
    region = "eu-west-2"
  }
}
